--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ dark-theme: false
 # and specify source (external or local).
 resume: true
 resume-external: false
-resume-url: assets/files/Arunaa_Resume.pdf
+resume-url: assets/files/Arunaa-Resume.pdf"
 
 url: https://arunaang.github.io/
 # your url: https://USERNAME.github.io
